# os-projects

./: .gitmodules  LabList.html  README.md  list.md  name-project.txt
LabList_files/: app.js.Без названия
loader/: loader.md
projects/develop/aa/: title.md
projects/develop/aa/lab3/: symbolic driver.docx
projects/develop/aa/lab5/: system calls.docx
projects/develop/aa/man/: Техническое задание.docx
projects/develop/aa/presentation/: lab.tex  presentation.tex  presentation.vrb  settings.tex  title.tex
projects/develop/aa/presentation WM/: lab.tex  title.tex
projects/develop/aa/project/: task.tex
projects/develop/aa/report/: analysis.tex  biblio.bib  description.tex  la.tex  listings.tex  report.tex  task.tex  theory.tex  titlepage.tex
projects/develop/aa/src/: .gitignore  .gitmodules  CMakeLists.txt  config.c  config.h  config.ini  main.c  xxon.desktop
projects/develop/ce/: Курсовой проект.pptx  Описание программы.docx  Отчет.docx  Программа и методика испытаний.docx  Руководство пользователя.docx  Руководство системного администратора.docx  Текст программы.docx  Техническое задание.docx
projects/develop/ce/InstallerArch/: Installer.sln  Installer.vcxproj  Source.cpp
projects/develop/cm/: title.md
projects/develop/cm/man/: 1-Техническое задание.docx  2-Описание ПО.docx  3-Руководство пользователя.docx  (+2 more)
projects/develop/evd/: topic.md
projects/develop/sd/: report_course.docx
projects/develop/za/lab1/src/: CMakeLists.txt  static.c
projects/develop/za/src/daemon/: CMakeLists.txt  Struct.h  main.cpp
works/aa/lab1/: profiling.docx
works/aa/lab2/: installers.docx
works/aa/lab2/task_manager-daemon/: CMakeLists.txt  Logger.cpp  Logger.h  ProcessInfo.cpp  ProcessInfo.h  ProcessTable.cpp  Util.h  main.cpp
works/aa/lab4/: obfuscators.docx
works/aa/lab6/: loaders.docx
works/cm/lab1. Profiling in Win&Linux/: lab1. Profiling in Win&Linux.docx
works/cm/lab2. Services and Daemons in Win&Linux/: lab2. Services and Daemons in Win&Linux.docx  ~$b2. Services and Daemons in Win&Linux.docx
works/cm/lab3. Driver in Linux/: lab3. Driver in Linux v1.1.docx
works/cm/lab4. Obfuscator/: lab5. Obfuscator.docx  links.txt
works/cm/lab5. Bootloader/: lab5. Bootloader (developing in Linux).docx  logs.txt
works/cm/lab6. SystemCalls (sys_rt_sig...)/: lab6. SystemCalls (sys_rt_sig...).docx
works/sd/lab1/: report_lab1.docx
works/sd/lab2/: report_lab2.docx
works/sd/lab3/: report_lab3.docx
works/sd/lab5/: report_lab5.docx
works/sd/lab6/: report_lab6.docx
works/za/Bootloaders/: Bootloaders.docx  hello.asm  multi.asm
works/za/Daemon service and setup/: Daemon_service_and_setup.docx
works/za/Daemon service and setup/daemon/: CMakeLists.txt  dynamic.c  inot.c  lib.h  static.c
works/za/Device driver/: Device_driver.docx
works/za/Profiling/: Profiling.docx
(+1784 files in other folders)
